fix firefox print issue

--- a/src/app/pages/cv/tools/tools.component.html
+++ b/src/app/pages/cv/tools/tools.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-wrap justify-between md:grid md:grid-cols-2 items-start gap-2">
+<div class="flex flex-wrap justify-between items-start gap-2 md:grid md:grid-cols-2 print:grid print:grid-cols-2">
   @for (tool of toolList(); track $index) {
     <div class="grid gap-0.5 min-w-28 justify-items-center">
       @let src = tool.icon.src;
