--- a/src/app/pages/cv/cv.component.html
+++ b/src/app/pages/cv/cv.component.html
@@ -8,14 +8,14 @@
   <div class="flex justify-center bg-transparent" data-theme="light">
     <main
       id="cv"
-      class="grid md:gap-2 print:gap-0 md:w-[210mm] md:min-w-[210mm] md:min-h-[297mm]"
+      class="grid md:gap-2 md:w-[210mm] md:min-w-[210mm] md:min-h-[297mm] print:gap-0 print:w-[210mm] print:min-w-[210mm] print:min-h-[297mm]"
     >
       <article
         id="pag1"
-        class="flex flex-col md:flex-row md:h-[297mm] bg-white shadow-xl"
+        class="flex flex-col md:flex-row md:h-[297mm] print:flex-row print:h-[297mm] bg-white shadow-xl"
       >
         <section
-          class="md:w-4/6 py-10 px-4 bg-blue-50 border-r-2 border-r-blue-50"
+          class="md:w-4/6 print:w-4/6 py-10 px-4 bg-blue-50 border-r-2 border-r-blue-50"
         >
           <div class="grid gap-5">
             <div class="flex justify-between">
@@ -25,7 +25,10 @@
                 </h1>
                 <h2 class="font-mono uppercase">front-end developer</h2>
               </div>
-              <div class="md:hidden grid avatar -mt-3" [title]="personalInfo.fullName">
+              <div
+                class="md:hidden print:hidden grid avatar -mt-3"
+                [title]="personalInfo.fullName"
+              >
                 <div
                   class="ring ring-slate-600 ring-offset-base-100 rounded-full w-32"
                 >
@@ -50,8 +53,11 @@
             </div>
           </div>
         </section>
-        <aside class="md:w-2/6 p-6 grid justify-items-center gap-6">
-          <div class="sm:hidden md:block grid avatar" [title]="personalInfo.fullName">
+        <aside class="md:w-2/6 print:w-2/6 p-6 grid justify-items-center gap-6">
+          <div
+            class="sm:hidden md:block print:block grid avatar"
+            [title]="personalInfo.fullName"
+          >
             <div
               class="ring ring-slate-600 ring-offset-base-100 rounded-full w-36"
             >
@@ -82,10 +88,10 @@
       </article>
       <article
         id="pag2"
-        class="flex flex-col md:flex-row md:h-[297mm] bg-white shadow-xl"
+        class="flex flex-col md:flex-row md:h-[297mm] print:flex-row print:h-[297mm] bg-white shadow-xl"
       >
         <section
-          class="md:w-4/6 py-10 px-4 bg-blue-50 border-r-2 border-r-blue-50 grid"
+          class="md:w-4/6 print:w-4/6 py-10 px-4 bg-blue-50 border-r-2 border-r-blue-50 grid"
         >
           <app-work-experience
             [timeline]="true"
@@ -101,7 +107,7 @@
             />
           </div>
         </section>
-        <aside class="md:w-2/6 p-6 grid content-between gap-6">
+        <aside class="md:w-2/6 print:w-2/6 p-6 grid content-between gap-6">
           <div class="grid gap-10">
             <div class="grid gap-2 justify-items-center">
               <h2
