--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<header>
+<header
+  class="backdrop-blur bg-base-100 bg-opacity-90 shadow-sm sticky top-0 z-50"
+>
   <app-header></app-header>
 </header>
 
