--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -165,18 +165,20 @@
           class="dropdown-content bg-base-200 text-base-content rounded-box top-px mt-16 max-h-[calc(100vh-10rem)] w-56 overflow-y-auto border border-white/5 shadow-2xl outline outline-1 outline-black/5"
         >
           <ul class="menu menu-sm gap-1">
-            @for (lang of langs | keyvalue; track $index) {
+            @for (lang of t("langs"); track $index) {
+              @let short = lang.short;
+              @let full = lang.full;
               <li>
                 <button
-                  [class.active]="translocoService.getActiveLang() === lang.key"
-                  (click)="translocoService.setActiveLang(lang.key)"
+                  [class.active]="translocoService.getActiveLang() === short"
+                  (click)="translocoService.setActiveLang(short)"
                 >
                   <span
                     class="badge badge-sm badge-outline pl-1.5 pr-1 pt-px font-mono text-[.6rem] font-bold tracking-widest opacity-50 uppercase"
                   >
-                    {{ lang.value.short }}
+                    {{ short }}
                   </span>
-                  <span class="font-[sans-serif]">{{ lang.value.full }}</span>
+                  <span class="font-[sans-serif]">{{ full }}</span>
                 </button>
               </li>
             }
