--- a/src/app/pages/cv/cv.component.html
+++ b/src/app/pages/cv/cv.component.html
@@ -1,5 +1,4 @@
 <ng-container *transloco="let t; scope: 'cv'">
-  @let lang = toAvailableLanguages((translocoService.langChanges$ | async) || translocoService.getActiveLang());
   <div class="sticky top-16 z-50 grid justify-items-end print:hidden">
     <button class="capitalize" (click)="onPrint()">
       {{ t("cv.print") }}
@@ -41,7 +40,8 @@
               <h2 class="text-xl font-semibold uppercase">
                 {{ t("cv.sections.educationAndTraining") }}
               </h2>
-              <app-education [educationList]="educationList[lang]" />
+              <!-- <app-education [educationList]="educationList[lang]" /> -->
+              <app-education />
             </div>
             <div>
               <h2 class="text-xl font-semibold uppercase">
@@ -49,7 +49,7 @@
               </h2>
               <app-work-experience
                 [timeline]="true"
-                [workExperienceList]="workExperienceList.pag1[lang]"
+                [page]="'page1'"
               />
             </div>
           </div>
@@ -66,7 +66,7 @@
             </div>
           </div>
 
-          <app-contacts [contacts]="contacts" />
+          <app-contacts />
 
           <div class="grid gap-2 justify-items-center">
             <h2
@@ -96,16 +96,13 @@
         >
           <app-work-experience
             [timeline]="true"
-            [workExperienceList]="workExperienceList.pag2[lang]"
+            [page]="'page2'"
           />
           <div>
             <h2 class="text-xl font-semibold uppercase">
               {{ t("cv.sections.certifications") }}
             </h2>
-            <app-certificates
-              class="text-sm"
-              [certificatesList]="certificateList"
-            />
+            <app-certificates class="text-sm" />
           </div>
         </section>
         <aside class="md:w-2/6 print:w-2/6 p-6 grid content-between gap-6">
