--- a/src/app/pages/cv/education/education.component.html
+++ b/src/app/pages/cv/education/education.component.html
@@ -1,26 +1,35 @@
-<div class="grid">
-  @for (education of educationList(); track $index) {
-    <div class="grid gap-1 small-caps">
-      <span class="font-black text-blue-500">
-        {{ education.qualification.name }}
-      </span>
-      <a [href]="education.institution.website">
-        {{ education.institution.name }}
-      </a>
-      <p>Profilo: {{ education.qualification.details }}</p>
-      <p>
-        Tesi:
-        <a
-          class="link-info"
-          [href]="education.thesis.link"
-          [title]="education.thesis.name"
-          target="_blank"
-        >
-          {{ education.thesis.name }}
-        </a>
-      </p>
-    </div>
+<ng-container *transloco="let t; scope: 'education'">
+  <div class="grid">
+    @for (education of asEducationList(t("education.education")); track $index) {
+      <div class="grid gap-1 small-caps">
+        <span class="font-black text-blue-500">
+          {{ education.qualification.name }}
+        </span>
+        @if (education.institution.website) {
+          <a [href]="education.institution.website">
+            {{ education.institution.name }}
+          </a>
+        } @else {
+          {{ education.institution.name }}
+        }
+        <p>
+          <span class="capitalize"> {{ t("education.profile") }}: </span>
+          {{ education.qualification.details }}
+        </p>
+        <p>
+          <span class="capitalize"> {{ t("education.thesis") }}: </span>
+          <a
+            class="link-info"
+            [href]="education.thesis.link"
+            [title]="education.thesis.name"
+            target="_blank"
+          >
+            {{ education.thesis.name }}
+          </a>
+        </p>
+      </div>
 
-    <hr class="my-4 border-dashed border-blue-500" />
-  }
-</div>
+      <hr class="my-4 border-dashed border-blue-500" />
+    }
+  </div>
+</ng-container>
