--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -101,7 +101,7 @@
         </svg>
       </div> -->
 
-      <label class="swap swap-rotate">
+      <button class="btn btn-ghost swap swap-rotate">
         <input type="checkbox" [checked]="!themeService.isDarkMode()" />
 
         <!-- sun icon -->
@@ -127,12 +127,11 @@
             d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z"
           />
         </svg>
-      </label>
+      </button>
 
       <div title="Change Language" class="dropdown dropdown-end">
-        <div
+        <button
           tabindex="0"
-          role="button"
           class="btn btn-ghost"
           aria-label="Language"
         >
@@ -159,10 +158,10 @@
               d="M1799 349l242 241-1017 1017L7 590l242-241 775 775 775-775z"
             ></path>
           </svg>
-        </div>
+        </button>
         <div
           tabindex="0"
-          class="dropdown-content bg-base-200 text-base-content rounded-box top-px mt-16 max-h-[calc(100vh-10rem)] w-56 overflow-y-auto border border-white/5 shadow-2xl outline outline-1 outline-black/5"
+          class="dropdown-content bg-base-200 text-base-content rounded-box top-px mt-12 max-h-[calc(100vh-10rem)] w-56 overflow-y-auto border border-white/5 shadow-2xl outline outline-1 outline-black/5 z-50"
         >
           <ul class="menu menu-sm gap-1">
             @for (lang of t("langs"); track $index) {
