move assets to public folder

--- a/src/app/pages/cv/cv.component.html
+++ b/src/app/pages/cv/cv.component.html
@@ -32,7 +32,7 @@
                 <div
                   class="ring ring-slate-600 ring-offset-base-100 rounded-full w-32"
                 >
-                  <img src="assets/bio/avatar.jpg" />
+                  <img src="img/bio/avatar.jpg" />
                 </div>
               </div>
             </div>
@@ -52,7 +52,7 @@
             <div
               class="ring ring-slate-600 ring-offset-base-100 rounded-full w-36"
             >
-              <img src="assets/bio/avatar.jpg" />
+              <img src="img/bio/avatar.jpg" />
             </div>
           </div>
 
@@ -77,7 +77,7 @@
           </div>
         </aside>
       </article>
-      <article
+      <!-- <article
         id="pag2"
         class="flex flex-col md:flex-row md:h-[297mm] print:flex-row print:h-[297mm] bg-white shadow-xl"
       >
@@ -133,13 +133,13 @@
             </small>
             <img
               class="justify-self-end w-32"
-              src="assets/img/signature/signature.png"
+              src="img/signature/signature.png"
               [title]="personalInfo.fullName"
               [alt]="personalInfo.fullName + ' signature'"
             />
           </div>
         </aside>
-      </article>
+      </article> -->
     </main>
   </div>
 </ng-container>
