--- a/src/app/pages/cv/cv.component.html
+++ b/src/app/pages/cv/cv.component.html
@@ -77,7 +77,7 @@
           </div>
         </aside>
       </article>
-      <!-- <article
+      <article
         id="pag2"
         class="flex flex-col md:flex-row md:h-[297mm] print:flex-row print:h-[297mm] bg-white shadow-xl"
       >
@@ -139,7 +139,7 @@
             />
           </div>
         </aside>
-      </article> -->
+      </article>
     </main>
   </div>
 </ng-container>
