--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -161,16 +161,17 @@
         </button>
         <div
           tabindex="0"
-          class="dropdown-content bg-base-200 text-base-content rounded-box top-px mt-12 max-h-[calc(100vh-10rem)] w-56 overflow-y-auto border border-white/5 shadow-2xl outline outline-1 outline-black/5 z-50"
+          class="dropdown-content bg-base-200 text-base-content rounded-box top-px mt-12 max-h-[calc(100vh-8.6rem)] w-56 overflow-y-auto border border-white/5 shadow-2xl outline-1 outline-black/5 z-50"
         >
-          <ul class="menu menu-sm gap-1">
+          <ul class="menu menu-sm w-full gap-1">
             @for (lang of t("langs"); track $index) {
               @let short = lang.short;
               @let full = lang.full;
+              @let isActiveLang = translocoService.getActiveLang() === short;
               <li>
                 <button
-                  [class.active]="translocoService.getActiveLang() === short"
-                  (click)="translocoService.setActiveLang(short)"
+                  [class.bg-sky-300]="isActiveLang"
+                  (click)="translocoService.setActiveLang(short);"
                 >
                   <span
                     class="badge badge-sm badge-outline pl-1.5 pr-1 pt-px font-mono text-[.6rem] font-bold tracking-widest opacity-50 uppercase"
