--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <app-header></app-header>
 </header>
 
-<div class="px-6 print:p-0">
+<div class="px-6 pt-4 print:p-0">
   <router-outlet />
 </div>
 
