--- a/src/app/pages/cv/contacts/contacts.component.html
+++ b/src/app/pages/cv/contacts/contacts.component.html
@@ -1,9 +1,9 @@
 <ng-container *transloco="let t; scope: 'contacts'">
   <ul class="grid gap-2 text-sm">
     <li>
-      <a [href]="'tel:' + contacts.phone" [title]="contacts.phone">
+      <a [href]="`tel:${contacts.phone}`" [title]="contacts.phone">
         <span class="flex gap-2">
-          <ng-icon class="text-blue-400" name="remixPhoneLine" size="18" />
+          <ng-icon class="!text-blue-400" name="remixPhoneLine" size="18" />
           <p class="text-gray-500">
             {{ contacts.phone }}
           </p>
@@ -14,9 +14,9 @@
     <hr />
 
     <li>
-      <a [href]="'mailto:' + contacts.email" [title]="contacts.email">
+      <a [href]="`mailto:${contacts.email}`" [title]="contacts.email">
         <span class="flex gap-2">
-          <ng-icon class="text-blue-400" name="remixMailLine" size="18" />
+          <ng-icon class="!text-blue-400" name="remixMailLine" size="18" />
           <p class="text-gray-500">
             {{ contacts.email }}
           </p>
@@ -33,7 +33,7 @@
         target="_blank"
       >
         <span class="flex gap-2">
-          <ng-icon class="text-blue-400" name="remixLinksFill" size="18" />
+          <ng-icon class="!text-blue-400" name="remixLinksFill" size="18" />
           <p class="text-gray-500">
             {{ contacts.website.shortLink }}
           </p>
@@ -51,7 +51,7 @@
       >
         <span class="flex gap-2">
           <ng-icon
-            class="text-blue-400"
+            class="!text-blue-400"
             name="remixLinkedinBoxFill"
             size="18"
           />
@@ -71,7 +71,7 @@
         target="_blank"
       >
         <span class="flex gap-2">
-          <ng-icon class="text-blue-400" name="remixGithubFill" size="18" />
+          <ng-icon class="!text-blue-400" name="remixGithubFill" size="18" />
           <p class="text-gray-500">
             {{ contacts.github.shortLink }}
           </p>
