--- a/src/app/pages/cv/cv.component.html
+++ b/src/app/pages/cv/cv.component.html
@@ -1,5 +1,5 @@
 <ng-container *transloco="let t; scope: 'cv'">
-  <div class="p-2 sticky top-16 z-10 grid justify-items-end print:hidden">
+  <div class="p-2 sticky top-0 z-10 grid justify-items-end print:hidden">
     <button
       class="btn btn-dash btn-info bg-white capitalize"
       (click)="onPrint()"
@@ -9,10 +9,11 @@
     </button>
   </div>
 
-  <div class="flex justify-center bg-transparent" data-theme="light">
+  <div class="flex justify-center">
     <main
+      data-theme="light"
       id="cv"
-      class="grid w-full md:gap-2 md:w-[210mm] md:min-w-[210mm] md:min-h-[297mm] print:gap-0 print:w-[210mm] print:min-w-[210mm] print:min-h-[297mm]"
+      class="grid w-full md:gap-2 md:w-[210mm] md:min-w-[210mm] md:min-h-[297mm] print:gap-0 print:w-[210mm] print:min-w-[210mm] print:min-h-[297mm] print:pl-2"
     >
       <article
         id="pag1"
