--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,112 +1,206 @@
 <ng-container *transloco="let t">
-  <nav class="navbar px-6">
-    <div class="navbar-start">
-      <!-- <div class="dropdown">
-        <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
+  <nav class="navbar">
+    <div class="dock justify-center shadow-sm">
+      <button routerLink="/home" routerLinkActive="dock-active">
+        <svg
+          class="size-[1.2em]"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+        >
+          <g fill="currentColor" stroke-linejoin="miter" stroke-linecap="butt">
+            <polyline
+              points="1 11 12 2 23 11"
+              fill="none"
+              stroke="currentColor"
+              stroke-miterlimit="10"
+              stroke-width="2"
+            ></polyline>
+            <path
+              d="m5,13v7c0,1.105.895,2,2,2h10c1.105,0,2-.895,2-2v-7"
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="square"
+              stroke-miterlimit="10"
+              stroke-width="2"
+            ></path>
+            <line
+              x1="12"
+              y1="22"
+              x2="12"
+              y2="18"
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="square"
+              stroke-miterlimit="10"
+              stroke-width="2"
+            ></line>
+          </g>
+        </svg>
+        <span class="dock-label">Home</span>
+      </button>
+      <button routerLink="/cv" routerLinkActive="dock-active">
+        <svg
+          class="size-[1.2em]"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+        >
+          <g fill="currentColor" stroke-linejoin="miter" stroke-linecap="butt">
+            <polyline
+              points="3 14 9 14 9 17 15 17 15 14 21 14"
+              fill="none"
+              stroke="currentColor"
+              stroke-miterlimit="10"
+              stroke-width="2"
+            ></polyline>
+            <rect
+              x="3"
+              y="3"
+              width="18"
+              height="18"
+              rx="2"
+              ry="2"
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="square"
+              stroke-miterlimit="10"
+              stroke-width="2"
+            ></rect>
+          </g>
+        </svg>
+        <span class="dock-label">CV</span>
+      </button>
+      <!-- <button>
+        <svg
+          class="size-[1.2em]"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+        >
+          <g fill="currentColor" stroke-linejoin="miter" stroke-linecap="butt">
+            <circle
+              cx="12"
+              cy="12"
+              r="3"
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="square"
+              stroke-miterlimit="10"
+              stroke-width="2"
+            ></circle>
+            <path
+              d="m22,13.25v-2.5l-2.318-.966c-.167-.581-.395-1.135-.682-1.654l.954-2.318-1.768-1.768-2.318.954c-.518-.287-1.073-.515-1.654-.682l-.966-2.318h-2.5l-.966,2.318c-.581.167-1.135.395-1.654.682l-2.318-.954-1.768,1.768.954,2.318c-.287.518-.515,1.073-.682,1.654l-2.318.966v2.5l2.318.966c.167.581.395,1.135.682,1.654l-.954,2.318,1.768,1.768,2.318-.954c.518.287,1.073.515,1.654.682l.966,2.318h2.5l.966-2.318c.581-.167,1.135-.395,1.654-.682l2.318.954,1.768-1.768-.954-2.318c.287-.518.515-1.073.682-1.654l2.318-.966Z"
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="square"
+              stroke-miterlimit="10"
+              stroke-width="2"
+            ></path>
+          </g>
+        </svg>
+        <span class="dock-label">Settings</span>
+      </button> -->
+      <div (click)="themeService.toggleTheme()">
+        <button class="swap swap-rotate">
+          <input type="checkbox" [checked]="!themeService.isDarkMode()" />
           <svg
+            class="swap-on size-5 fill-current"
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5"
-            fill="none"
             viewBox="0 0 24 24"
-            stroke="currentColor"
           >
             <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M4 6h16M4 12h16M4 18h7"
+              d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z"
             />
           </svg>
-        </div>
-        <ul
+          <!-- sun icon -->
+
+          <!-- moon icon -->
+          <svg
+            class="swap-off size-5 fill-current"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z"
+            />
+          </svg>
+        </button>
+        <div class="dock-label">Theme</div>
+      </div>
+      <div
+        title="Change Language"
+        class="hover:opacity-100 flex flex-col justify-center dropdown dropdown-end dropdown-top sm:dropdown-bottom"
+      >
+        <button
           tabindex="0"
-          class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
+          class="flex flex-col items-center"
+          aria-label="Language"
         >
-          <li>
-            <a routerLink="home" routerLinkActive="router-link-active">
-              Homepage
-            </a>
-          </li>
-          <li>
-            <a routerLink="cv" routerLinkActive="router-link-active">CV</a>
-          </li>
-          <li><a>About</a></li>
-        </ul>
-      </div> -->
+          <div class="flex items-center gap-0.5">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 16 16"
+              fill="currentColor"
+              class="size-5"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M11 5a.75.75 0 0 1 .688.452l3.25 7.5a.75.75 0 1 1-1.376.596L12.89 12H9.109l-.67 1.548a.75.75 0 1 1-1.377-.596l3.25-7.5A.75.75 0 0 1 11 5Zm-1.24 5.5h2.48L11 7.636 9.76 10.5ZM5 1a.75.75 0 0 1 .75.75v1.261a25.27 25.27 0 0 1 2.598.211.75.75 0 1 1-.2 1.487c-.22-.03-.44-.056-.662-.08A12.939 12.939 0 0 1 5.92 8.058c.237.304.488.595.752.873a.75.75 0 0 1-1.086 1.035A13.075 13.075 0 0 1 5 9.307a13.068 13.068 0 0 1-2.841 2.546.75.75 0 0 1-.827-1.252A11.566 11.566 0 0 0 4.08 8.057a12.991 12.991 0 0 1-.554-.938.75.75 0 1 1 1.323-.707c.049.09.099.181.15.271.388-.68.708-1.405.952-2.164a23.941 23.941 0 0 0-4.1.19.75.75 0 0 1-.2-1.487c.853-.114 1.72-.185 2.598-.211V1.75A.75.75 0 0 1 5 1Z"
+                clip-rule="evenodd"
+              ></path>
+            </svg>
+            <svg
+              width="12px"
+              height="12px"
+              class="hidden h-2 w-2 fill-current opacity-60 sm:inline-block"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 2048 2048"
+            >
+              <path
+                d="M1799 349l242 241-1017 1017L7 590l242-241 775 775 775-775z"
+              ></path>
+            </svg>
+          </div>
+          <div class="dock-label">Language</div>
+        </button>
+
+        <div
+          tabindex="0"
+          class="dropdown-content bg-base-200 rounded-box w-56 overflow-y-auto border border-white/5 shadow-2xl outline-1 outline-black/5 z-50"
+        >
+          <ul class="menu menu-sm w-full gap-1">
+            @for (lang of t("langs"); track $index) {
+              @let short = lang.short;
+              @let full = lang.full;
+              @let isActiveLang = translocoService.getActiveLang() === short;
+              <li>
+                <button
+                  [class]="isActiveLang ? 'border-b border-b-sky-500' : ''"
+                  (click)="translocoService.setActiveLang(short)"
+                >
+                  <span
+                    class="badge badge-sm badge-outline pl-1.5 pr-1 pt-px font-mono text-[.6rem] font-bold tracking-widest opacity-50 uppercase"
+                  >
+                    {{ short }}
+                  </span>
+                  <span class="font-[sans-serif]">{{ full }}</span>
+                </button>
+              </li>
+            }
+          </ul>
+        </div>
+      </div>
     </div>
-    <div class="navbar-center">
-      <!-- <a class="text-xl">{{ t("full-name") | titlecase }}</a> -->
-    </div>
+  </nav>
+  <nav class="hidden navbar px-6">
+    <div class="navbar-start"></div>
+    <div class="navbar-center"></div>
     <div class="navbar-end">
-      <!-- <button class="btn btn-ghost btn-circle">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="h-5 w-5"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
-          />
-        </svg>
-      </button> -->
-
-      <!-- <div class="flex cursor-pointer gap-2">
-        <svg
-          (click)="
-            themeService.applyTheme(themeService.Theme.Light);
-            toggleThemeInput.checked = themeService.isDarkMode()
-          "
-          class="size-6"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        >
-          <circle cx="12" cy="12" r="5" />
-          <path
-            d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"
-          />
-        </svg>
-        <input
-          type="checkbox"
-          class="toggle theme-controller"
-          #toggleThemeInput
-          (change)="themeService.toggleTheme()"
-          [defaultChecked]="themeService.isDarkMode()"
-          [checked]="themeService.isDarkMode()"
-        />
-        <svg
-          (click)="
-            themeService.applyTheme(themeService.Theme.Dark);
-            toggleThemeInput.checked = this.themeService.isDarkMode()
-          "
-          class="size-6"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        >
-          <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
-        </svg>
-      </div> -->
-
-      <button class="btn btn-ghost swap swap-rotate">
+      <button
+        class="btn btn-ghost swap swap-rotate"
+        (click)="themeService.toggleTheme()"
+      >
         <input type="checkbox" [checked]="!themeService.isDarkMode()" />
 
-        <!-- sun icon -->
         <svg
-          (click)="themeService.applyTheme(themeService.Theme.Light)"
           class="swap-on size-5 fill-current"
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 24 24"
@@ -115,10 +209,10 @@
             d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z"
           />
         </svg>
+        <!-- sun icon -->
 
         <!-- moon icon -->
         <svg
-          (click)="themeService.applyTheme(themeService.Theme.Dark)"
           class="swap-off size-5 fill-current"
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 24 24"
@@ -130,11 +224,7 @@
       </button>
 
       <div title="Change Language" class="dropdown dropdown-end">
-        <button
-          tabindex="0"
-          class="btn btn-ghost"
-          aria-label="Language"
-        >
+        <button tabindex="0" class="btn btn-ghost" aria-label="Language">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 16 16"
@@ -161,7 +251,7 @@
         </button>
         <div
           tabindex="0"
-          class="dropdown-content bg-base-200 text-base-content rounded-box top-px mt-12 max-h-[calc(100vh-8.6rem)] w-56 overflow-y-auto border border-white/5 shadow-2xl outline-1 outline-black/5 z-50"
+          class="dropdown-content bg-base-200 text-base-content rounded-box top-px mt-12 w-56 overflow-y-auto border border-white/5 shadow-2xl outline-1 outline-black/5 z-50"
         >
           <ul class="menu menu-sm w-full gap-1">
             @for (lang of t("langs"); track $index) {
@@ -171,7 +261,7 @@
               <li>
                 <button
                   [class.bg-sky-300]="isActiveLang"
-                  (click)="translocoService.setActiveLang(short);"
+                  (click)="translocoService.setActiveLang(short)"
                 >
                   <span
                     class="badge badge-sm badge-outline pl-1.5 pr-1 pt-px font-mono text-[.6rem] font-bold tracking-widest opacity-50 uppercase"
