--- a/src/app/pages/cv/cv.component.html
+++ b/src/app/pages/cv/cv.component.html
@@ -6,6 +6,7 @@
       [title]="t('cv.print') | capitalize"
     >
       {{ t("cv.print") }}
+      <ng-icon [svg]="remixIcon.remixPrinterLine" />
     </button>
   </div>
 
