home page translation

--- a/src/app/pages/cv/cv.component.html
+++ b/src/app/pages/cv/cv.component.html
@@ -6,7 +6,7 @@
       [title]="t('cv.print') | capitalize"
     >
       {{ t("cv.print") }}
-      <ng-icon [svg]="remixIcon.remixPrinterLine" />
+      <ng-icon class="mt-0.5" [svg]="remixIcon.remixPrinterLine" />
     </button>
   </div>
 
@@ -29,7 +29,7 @@
                 <h1 class="text-5xl font-bold w-min">
                   {{ personalInfo.fullName }}
                 </h1>
-                <h2 class="font-mono uppercase">front-end developer</h2>
+                <h2 class="font-mono uppercase">Front-End Developer</h2>
               </div>
               <div
                 class="md:hidden print:hidden grid avatar -mt-3"
