--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,29 +1,18 @@
-<div class="min-h-full hero bg-base-100 pt-2">
-  <div class="hero-content max-w-max text-center">
-    <div class="max-w-md">
-      <h1 class="text-3xl sm:text-4xl font-bold">
-        Front-End Developer (Angular)
-      </h1>
-      <div class="text-xl sm:text-2xl py-6 grid gap-4">
-        <p>
-          👋🏻 Ciao! sono Federico, uno sviluppatore software appassionato di
-          tecnologie web specializzato in Angular.
-        </p>
-        <p>
-          In questo sito vorrei condividere la mia esperienza e le mie
-          conoscenze attraverso articoli, tutorial e racconti delle mie
-          esperienze lavorative.
-        </p>
-        <p>
-          Vorrei condividere con te mie competenze, scoprire insieme le nuove
-          tecnologie e parlare delle nuove tendenze nel settore.
-        </p>
-        <p>
-          Su questo sito potrai trovare informazioni sui miei progetti
-          personali, sui miei interessi e sulle mie esperienze lavorative.
-        </p>
-        <p>Spero che ti piaccia esplorare il mio sito!</p>
+<ng-container *transloco="let t; scope: 'home'">
+  <div class="min-h-full hero bg-base-100 pt-2">
+    <div class="hero-content max-w-max text-center">
+      <div class="max-w-md">
+        <h1 class="text-3xl sm:text-4xl font-bold">
+          Front-End Developer (Angular)
+        </h1>
+        <div class="text-xl sm:text-2xl py-6 grid gap-4">
+          @for (item of t("home.intro"); track $index) {
+            <p>
+              {{ item }}
+            </p>
+          }
+        </div>
       </div>
     </div>
   </div>
-</div>
+</ng-container>
