--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,22 +1,16 @@
 <ng-container *transloco="let t">
   <nav class="navbar">
     <div class="dock justify-center shadow-sm">
-      <button
-        tabindex="0"
-        [routerLink]="routeDetails.home.url"
-        routerLinkActive="dock-active"
-      >
-        <ng-icon size="1.2rem" [svg]="remixIcon.remixHome4Fill"></ng-icon>
-        <span class="dock-label">{{ routeDetails.home.title }}</span>
-      </button>
-      <button
-        tabindex="0"
-        [routerLink]="routeDetails.cv.url"
-        routerLinkActive="dock-active"
-      >
-        <ng-icon size="1.2rem" [svg]="remixIcon.remixArticleLine"></ng-icon>
-        <span class="dock-label">{{ routeDetails.cv.title }}</span>
-      </button>
+      @for (page of pages | keyvalue: null; track $index) {
+        <button
+          tabindex="0"
+          [routerLink]="page.value.url"
+          routerLinkActive="dock-active"
+        >
+          <ng-icon size="1.2rem" [svg]="page.value.icon"></ng-icon>
+          <span class="dock-label">{{ page.value.title }}</span>
+        </button>
+      }
       <!-- <button>
         <svg
           class="size-[1.2em]"
@@ -53,6 +47,7 @@
             type="checkbox"
             [checked]="!themeService.isDarkMode()"
           />
+          <!-- sun icon -->
           <svg
             class="swap-on size-5 fill-current"
             xmlns="http://www.w3.org/2000/svg"
@@ -62,7 +57,6 @@
               d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z"
             />
           </svg>
-          <!-- sun icon -->
 
           <!-- moon icon -->
           <svg
