--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,44 +2,23 @@
   <nav class="navbar">
     <div class="dock justify-center shadow-sm">
       @for (page of pages | keyvalue: null; track $index) {
-        <button
-          tabindex="0"
-          [routerLink]="page.value.url"
-          routerLinkActive="dock-active"
-        >
-          <ng-icon size="1.2rem" [svg]="page.value.icon"></ng-icon>
-          <span class="dock-label">{{ page.value.title }}</span>
-        </button>
+        @if (!page.value.hidden) {
+          <button
+            tabindex="0"
+            [routerLink]="page.value.url"
+            routerLinkActive="dock-active"
+          >
+            <ng-icon size="1.2rem" [svg]="page.value.icon"></ng-icon>
+            <span class="dock-label">{{ page.value.title }}</span>
+          </button>
+        }
       }
-      <!-- <button>
-        <svg
-          class="size-[1.2em]"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-        >
-          <g fill="currentColor" stroke-linejoin="miter" stroke-linecap="butt">
-            <circle
-              cx="12"
-              cy="12"
-              r="3"
-              fill="none"
-              stroke="currentColor"
-              stroke-linecap="square"
-              stroke-miterlimit="10"
-              stroke-width="2"
-            ></circle>
-            <path
-              d="m22,13.25v-2.5l-2.318-.966c-.167-.581-.395-1.135-.682-1.654l.954-2.318-1.768-1.768-2.318.954c-.518-.287-1.073-.515-1.654-.682l-.966-2.318h-2.5l-.966,2.318c-.581.167-1.135.395-1.654.682l-2.318-.954-1.768,1.768.954,2.318c-.287.518-.515,1.073-.682,1.654l-2.318.966v2.5l2.318.966c.167.581.395,1.135.682,1.654l-.954,2.318,1.768,1.768,2.318-.954c.518.287,1.073.515,1.654.682l.966,2.318h2.5l.966-2.318c.581-.167,1.135-.395,1.654-.682l2.318.954,1.768-1.768-.954-2.318c.287-.518.515-1.073.682-1.654l2.318-.966Z"
-              fill="none"
-              stroke="currentColor"
-              stroke-linecap="square"
-              stroke-miterlimit="10"
-              stroke-width="2"
-            ></path>
-          </g>
-        </svg>
-        <span class="dock-label">Settings</span>
-      </button> -->
+
+      <div class=" pointer-events-none h-8">
+        <hr class="border h-full "/>
+      </div>
+
+
       <div tabindex="0" (click)="themeService.toggleTheme()">
         <button tabindex="-1" class="swap swap-rotate">
           <input
