added xeokit, local thesis download

--- a/src/app/pages/cv/education/education.component.html
+++ b/src/app/pages/cv/education/education.component.html
@@ -23,6 +23,7 @@
             [href]="education.thesis.link"
             [title]="education.thesis.name"
             target="_blank"
+            download
           >
             {{ education.thesis.name }}
           </a>
