--- a/src/app/pages/cv/cv.component.html
+++ b/src/app/pages/cv/cv.component.html
@@ -141,7 +141,7 @@
               {{ t("cv.privacy") | capitalize }}
             </small>
             <img
-              class="justify-self-end w-32"
+              class="justify-self-center w-32 sm:justify-self-end"
               src="img/signature/signature.png"
               [title]="personalInfo.fullName"
               [alt]="`${personalInfo.fullName} signature`"
